--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/product_form.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/product_form.html
@@ -18,7 +18,7 @@
       <input type="hidden" th:field="*{id}">
       <div class="mb-3">
         <label>Name</label>
-        <input type="text" class="form-control" th:field="*{name}" placeholder="Enter name">
+        <input type="text" class="form-control" th:field="*{title}" placeholder="Enter name">
       </div>
       <div class="mb-3">
         <label>Name</label>
