--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
@@ -1,25 +1,27 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
-    <title>Product list</title>
-</head>
+<head th:replace="fragments/head :: header"/>
 <body>
+
+<!--
+               TODO оживить кнопки НАЗАД и ВПЕРЕД
+               TODO добавить выбор "по сколько элементов отображать"
+               TODO добавить сортировку по каждому полю
+               TODO (если не успели сдать ДЗ до 30.04 - до занятия) выделить в фрагменты повторяющийся код
+-->
 
 <div class="container">
     <div class="col-10 mx-auto mt-3">
         <div class="row">
-            <div class="col-6">
+            <div class="col-3">
                 <h1>Product list</h1>
             </div>
-            <div class="col-6">
+            <div class="col-9">
                 <form class="form-inline" th:method="get">
-                    <!-- TODO добавить поля фильтров из ДЗ -->
+                    <input type="number" th:value="${param.min}" class="form-control-md" id="min"
+                           name="min" placeholder="Min">
+                    <input type="number" th:value="${param.max}" class="form-control-md" id="max"
+                           name="max" placeholder="Max">
                     <input type="text" th:value="${param.titleFilter}" class="form-control-md" id="title-filter"
                            name="titleFilter" placeholder="Find">
                     <button type="submit" class="btn btn-outline-dark"><i class="fas fa-search"></i></button>
@@ -39,7 +41,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="product : ${products}">
+            <tr th:if="${products.hasContent()}" th:each="product : ${products}">
                 <th scope="row" th:text="${product.id}">1</th>
                 <th scope="row" th:text="${product.title}">1</th>
                 <th scope="row" th:text="${product.description}">1</th>
@@ -51,17 +53,35 @@
                         <i class="far fa-trash-alt"></i></a>
                 </th>
             </tr>
+
+            <tr th:unless="${products.hasContent}">
+                <td colspan="5">No data</td>
+            </tr>
             </tbody>
         </table>
+    </div>
 
+    <div th:if="${products.hasContent()}">
+        <nav aria-label="product list">
+            <ul class="pagination justify-content-center">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li th:each="num : ${#numbers.sequence(1, products.totalPages)}"
+                    class="page-item"
+                    th:classappend="${num == products.number + 1} ? 'active'">
+                    <a class="page-link" th:href="@{/product(
+                    page=${num},
+                    size=${products.size},
+                    titleFilter=${param.titleFilter},
+                    minPrice=${param.minPrice},
+                    maxPrice=${param.maxPrice}
+                    )}">[[${num}]]</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
     </div>
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-
-<script src="https://kit.fontawesome.com/e8cd5e0a28.js" crossorigin="anonymous"></script>
+<script th:replace="fragments/footer :: scripts"/>
 </body>
 </html>
