--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/product_form.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/product_form.html
@@ -1,14 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
-  <title>Product list</title>
-</head>
+<head th:replace="fragments/head :: header"/>
 <body>
 
 <div class="container">
@@ -17,15 +9,13 @@
     <form th:action="@{product_update}" th:method="post" th:object="${product}">
       <input type="hidden" th:field="*{id}">
       <div class="mb-3">
-        <label>Name</label>
-        <input type="text" class="form-control" th:field="*{title}" placeholder="Enter name">
+        <!-- НАИМЕНОВАНИЕ ПРОДУКТА -->
+        <input type="text" class="form-control" th:field="*{title}" placeholder="Enter title">
       </div>
       <div class="mb-3">
-        <label>Name</label>
         <input type="text" class="form-control" th:field="*{description}" placeholder="Enter description">
       </div>
       <div class="mb-3">
-        <label>Name</label>
         <input type="text" class="form-control" th:field="*{price}" placeholder="Enter price">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
@@ -35,11 +25,6 @@
   </div>
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-
-<script src="https://kit.fontawesome.com/e8cd5e0a28.js" crossorigin="anonymous"></script>
+<script th:replace="fragments/footer :: scripts"/>
 </body>
 </html>
