--- a/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
+++ b/java-spring-boot-lesson-four/src/main/resources/templates/product_views/index.html
@@ -33,10 +33,10 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">id</th>
-                <th scope="col">Name</th>
-                <th scope="col">Description</th>
-                <th scope="col">Price</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Id', 'id')">id</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Title', 'title')">Title</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Description', 'description')">Description</th>
+                <th scope="col" th:include="fragments/sort_header :: sort_header('Price', 'price')">Price</th>
                 <th scope="col">Actions</th>
             </tr>
             </thead>
@@ -64,7 +64,15 @@
     <div th:if="${products.hasContent()}">
         <nav aria-label="product list">
             <ul class="pagination justify-content-center">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item" th:if="${products.hasPrevious()}">
+                    <a class="page-link" th:href="@{/product(
+                    page=${products.number},
+                    size=${products.size},
+                    titleFilter=${param.titleFilter},
+                    min=${param.min},
+                    max=${param.max}
+                    )}">Previous</a>
+                </li>
                 <li th:each="num : ${#numbers.sequence(1, products.totalPages)}"
                     class="page-item"
                     th:classappend="${num == products.number + 1} ? 'active'">
@@ -72,11 +80,19 @@
                     page=${num},
                     size=${products.size},
                     titleFilter=${param.titleFilter},
-                    minPrice=${param.minPrice},
-                    maxPrice=${param.maxPrice}
+                    min=${param.min},
+                    max=${param.max}
                     )}">[[${num}]]</a>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                <li class="page-item" th:if="${products.hasNext()}">
+                    <a class="page-link" th:href="@{/product(
+                    page=${products.number+2},
+                    size=${products.size},
+                    titleFilter=${param.titleFilter},
+                    min=${param.min},
+                    max=${param.max}
+                    )}">Next</a>
+                </li>
             </ul>
         </nav>
     </div>
